--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/Jeferson6191/Projeto-FULLSTACK/issues"
   },
