--- a/pizzaria-FULLSTACK/package.json
+++ b/pizzaria-FULLSTACK/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
+    "pg": "^8.18.0",
+    "pg-hstore": "^2.3.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -22,6 +26,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "nodemon": "^3.1.14",
     "vite": "^7.3.1"
   }
 }
