terminado o login css

--- a/pizzaria-FULLSTACK/package.json
+++ b/pizzaria-FULLSTACK/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "devn": "nodemon src/backend/main.js",
     "build": "vite build",
