--- a/pizzaria-FULLSTACK/package.json
+++ b/pizzaria-FULLSTACK/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "devn": "nodemon src/backend/main.js",
+    "devn": "nodemon backend/main.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
