--- a/pizzaria-FULLSTACK/package.json
+++ b/pizzaria-FULLSTACK/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
+    "bcrypt": "^6.0.0",
+    "chalk": "^5.6.2",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
