--- a/pizzaria-FULLSTACK/package.json
+++ b/pizzaria-FULLSTACK/package.json
@@ -16,6 +16,8 @@
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.2",
     "cors": "^2.8.6",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "pg": "^8.18.0",
